# typst-preview.nvim

bridge/: Cargo.toml
bridge/src/: main.rs
lua/typst-preview/: config.lua  health.lua  init.lua  preview.lua  scroll.lua  utils.lua
